# doc-to-md

./: .gitignore  Justfile  README.md  code_classes  pyproject.toml
assets/: banner.ai  doc2md_icon.ai
scripts/: make_icon.py
src/doctomd/: __init__.py  cli.py  gui.py
src/doctomd/gui/: __init__.py
src/doctomd/gui/resources/: app_icon.icns
src/doctomd/resources/: app_icon.icns
tests/: DocToMDSampleDocument-formatted.html  DocToMDSampleDocument.html  output.md  test_fixes.py
