[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doctomd"
version = "0.0.1"
authors = [
  { name="Mark Smith", email="mark.smith@mongodb.com" },
]
description = "A utility to generate Markdown for ContentStack."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload",
]
dependencies = [
    "beautifulsoup4 ~= 4.12.2",
    "cssutils ~= 2.9.0",
    "mdformat ~= 0.7.17",
    "mdformat-gfm ~= 0.3.5",
    "lxml ~= 4.9.3",
    "rich ~= 13.7",
]

[project.urls]
Homepage = "https://github.com/judy2k/doc-to-md"
Issues = "https://github.com/judy2k/doc-to-md/issues"

[project.scripts]
doc2md = "doctomd.cli:main"