[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doctomd"
version = "0.0.1"
authors = [
  { name="Mark Smith", email="mark.smith@mongodb.com" },
]
description = "A utility to generate Markdown for ContentStack."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload",
]
dependencies = [
    "beautifulsoup4 == 4.12.2",
    "cssutils == 2.9.0",
    "mdformat == 0.7.17",
    "mdformat-gfm == 0.3.5",
    "lxml == 4.9.3",
    "rich == 13.7.1",
    "pypandoc_binary == 1.13"
]

[project.urls]
Homepage = "https://github.com/judy2k/doc-to-md"
Issues = "https://github.com/judy2k/doc-to-md/issues"

[project.scripts]
doc2md = "doctomd.cli:main"
doc2md-gui = "doctomd.gui:main"

[project.optional-dependencies]
dev = [
  "ruff",
  "pillow",
  "briefcase",
]
test = [
  "pytest",
]
gui = [
  "toga == 0.4.4",
]


# content below this line added by briefcase convert
# This project was generated with 0.3.18 using template: https://github.com/beeware/briefcase-template@v0.3.18
[tool.briefcase]
project_name = "Google Doc Converter"
bundle = "uk.co.judy.doctomd"
version = "0.0.1"
url = "https://github.com/judy2k/doc-to-md"
license = "Apache Software License"
author = "Mark Smith"
author_email = "mark.smith@mongodb.com"

[tool.briefcase.app.doctomd]
formal_name = "Google Doc Converter"
icon = "assets/1x/app_icon"
installer_icon = "assets/1x/app_icon"
description = "A utility to generate Markdown for ContentStack."
long_description = """More details about the app should go here.
"""
sources = [
    "src/doctomd",
]
test_sources = [
    "tests",
]

